--- a/33-outliers.qmd
+++ b/33-outliers.qmd
@@ -136,6 +136,7 @@ outlier_df <- data.frame(
 ggplot(outlier_df, aes(x = x, y = y)) +
   geom_line() +
   geom_point(size = 0.60) +
+  scale_y_continuous(breaks = c(0, 1)) +
   theme_minimal() +
   theme(plot.title = element_text(hjust = 0.5)) +
   facet_wrap(vars(type)) +
