--- a/33-outliers.qmd
+++ b/33-outliers.qmd
@@ -99,7 +99,7 @@ By understanding these effects and how to address them, analysts can improve the
 
 ## Outlier Effects
 
-The figure below illustrates outlier effects.
+This section discusses how to adjust a series for different types of outlier effects in a series. Figure @fig-outlier-effects shows the most common ones.
 
 ```{r}
 #| echo: false
@@ -142,6 +142,8 @@ outlier_df <- data.frame(
 
 ```{r}
 #| echo: false
+#| label: fig-outlier-effects
+#| fig-cap: Outlier effects
 library(ggplot2)
 ggplot(outlier_df, aes(x = x, y = y)) +
   geom_line() +
