--- a/33-outliers.qmd
+++ b/33-outliers.qmd
@@ -150,7 +150,7 @@ ggplot(outlier_df, aes(x = x, y = y)) +
   scale_y_continuous(breaks = c(0, 1)) +
   theme_minimal() +
   theme(plot.title = element_text(hjust = 0.5)) +
-  facet_wrap(vars(type)) +
+  facet_wrap(vars(type), ncol = 2) +
   labs(x = NULL, y = NULL)
 ```
 
