--- a/33-outliers.qmd
+++ b/33-outliers.qmd
@@ -148,7 +148,7 @@ library(ggplot2)
 ggplot(outlier_df, aes(x = x, y = y)) +
   geom_line() +
   scale_y_continuous(breaks = c(0, 1)) +
-  theme(plot.title = element_text(hjust = 0.5)) +
+  theme(plot.title = element_text(hjust = 0.5), panel.grid = element_blank()) +
   facet_wrap(vars(type), ncol = 2) +
   labs(x = NULL, y = NULL)
 ```
